# book

./: .envrc  .gitignore  README.md  _config.yml  _toc.yml  build.sh  clean.sh  flake.nix  jupytext.toml  myst.yml  pyproject.toml  requirements.txt  setup.sh  watch.sh
.github/workflows/: deploy-book.yml  deploy.yml  deploy.yml.bak  deploy.yml.default
_build/.doctrees/: README.doctree  environment.pickle  index.doctree
_build/.doctrees/content/: index.doctree  syllabus.doctree
_build/.doctrees/content/appendices/: math-review.doctree  python-primer.doctree
_build/.doctrees/content/week01/: exercises.doctree  index.doctree  lecture01.doctree
_build/.doctrees/test/: index.doctree
_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/content/appendices/: python-primer.md
_build/html/_sources/content/week01/: exercises.md  index.md
_build/html/_sources/test/: index.md
_build/html/content/: index.html  syllabus.html
_build/html/content/appendices/: math-review.html  python-primer.html
_build/html/content/week01/: exercises.html  index.html  lecture01.html
_build/html/test/: index.html
content/: index.md  syllabus.md
content/appendices/: math-review.md
content/week-00/: Lecture_0b_Review_of_Probability_Distributions.ipynb
content/week01/: Lecture_1_Maximum_Likelihood_Estimation.md  Lecture_2_World_Series_Model_(Mosteller_1952)_&_Logistic_Regression.md  index.md  lecture01.md
content/week01/.ipynb_checkpoints/: Lecture_1_Maximum_Likelihood_Estimation-checkpoint.md
jupyter-book/: _config.yml  _toc.yml  requirements.txt
jupyter-book/content/: index.md  syllabus.md
jupyter-book/content/week-00/: Lecture_0a_Python_and_Jupyter_Basics.ipynb  Lecture_0b_Review_of_Probability_Distributions.ipynb
jupyter-book/content/week-01/: Lecture_1_Maximum_Likelihood_Estimation.ipynb  Lecture_2_World_Series_Model_(Mosteller_1952)_&_Logistic_Regression.ipynb
jupyter-book/content/week-01/.ipynb_checkpoints/: Lecture_1_Maximum_Likelihood_Estimation-Copy1-checkpoint.ipynb
jupyter-book/content/week-02/: Lecture_3_Monte_Carlo_Methods.ipynb  Lecture_4_Simulating_Tournaments.ipynb  [AM115_215_2024]_Lecture_3_Monte_Carlo_Methods.ipynb  [AM115_215_2024]_Lecture_4_Simulating_Tournaments.ipynb
jupyter-book/content/week-03/: Lecture_6_Diffusion,_Geometric_Brownian_Motion.ipynb
scripts/: build.sh  dev.sh  serve.sh  setup-notebooks.sh
test/: flake.nix
