[project]
name = "am215-course-materials"
version = "0.1.0"
description = "AM215: Advanced Scientific Computing Course Materials"
authors = [
    {name = "Harvard University", email = "your-email@harvard.edu"},
]
requires-python = ">=3.11"
dependencies = [
    # Core MyST tools
    "jupyter-book>=0.15.1",
    "myst-parser>=2.0.0",
    "myst-nb>=0.17.0",
    "sphinx>=6.0.0",
    "sphinx-book-theme>=1.0.0",
    "sphinx-external-toc>=0.3.0",
    
    # Scientific computing
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "scipy>=1.10.0",
    "sympy>=1.12.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    
    # Jupyter ecosystem
    "jupyter>=1.0.0",
    "jupytext>=1.14.0",
    "ipykernel>=6.20.0",
    "ipywidgets>=8.0.0",
    
    # Development tools
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    
    # Additional useful packages
    "requests>=2.28.0",
    "pyyaml>=6.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
