# pyproject.toml - Jupyter Book 2.x beta
[project]
name = "am215-course-materials"
version = "0.1.0"
description = "AM215: Advanced Scientific Computing Course Materials"
authors = [
    {name = "Harvard University", email = "your-email@harvard.edu"},
]
requires-python = ">=3.9"
dependencies = [
    # Core Jupyter Book 2.x beta - MyST-first
    "jupyter-book==2.0.0b1",  # Exact beta version
    "myst-parser>=3.0.0",
    "myst-nb>=1.0.0",
    
    # Sphinx - latest for 2.x compatibility
    "sphinx>=7.0.0",
    
    # Scientific computing
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "sympy>=1.12.0",
    "pandas>=2.0.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    
    # Jupyter ecosystem
    "jupyter>=1.0.0",
    "jupytext>=1.16.0",
    "ipykernel>=6.20.0",
    "ipywidgets>=8.0.0",
    
    # Development tools
    "black>=23.0.0",
    "ruff>=0.1.0",
    
    # Additional useful packages
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
